--- a/package.json
+++ b/package.json
@@ -14,11 +14,14 @@
   "license": "ISC",
   "devDependencies": {
     "browser-sync": "^2.18.8",
-    "gulp": "^3.9.1",
     "gulp-autoprefixer": "^3.1.1",
-    "gulp-cssnano": "^2.1.2",
     "gulp-sass": "^3.1.0",
     "gulp-sourcemaps": "^2.4.1",
     "sassdoc": "^2.1.20"
+  },
+  "dependencies": {
+    "gulp": "^3.9.1",
+    "gulp-cssnano": "^2.1.2",
+    "sass": "^1.0.0-beta.4"
   }
 }
