--- a/package.json
+++ b/package.json
@@ -1,27 +1,36 @@
 {
-  "name": "Boiler Nude",
+  "name": "boiler-nude",
   "version": "1.0.0",
-  "description": "Setting Up a Gulp Workflow for Beginners",
-  "main": "index.js",
+  "description": "some task runner and browser sync envi",
+  "main": "gulpfile.js",
+  "directories": {
+    "doc": "docs"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/Mariacakovacs/Boiler-Nude.git"
+    "url": "git+https://github.com/Mariacakovacs/Boiler-Nude.git"
   },
+  "keywords": [
+    "gulp",
+    "sass",
+    "browsersync"
+  ],
   "author": "Maria Kovacs",
   "license": "ISC",
-  "devDependencies": {
-    "browser-sync": "^2.18.8",
-    "gulp-autoprefixer": "^3.1.1",
-    "gulp-sass": "^3.1.0",
-    "gulp-sourcemaps": "^2.4.1",
-    "sassdoc": "^2.1.20"
+  "bugs": {
+    "url": "https://github.com/Mariacakovacs/Boiler-Nude/issues"
   },
-  "dependencies": {
+  "homepage": "https://github.com/Mariacakovacs/Boiler-Nude#readme",
+  "devDependencies": {
+    "browser-sync": "^2.18.13",
     "gulp": "^3.9.1",
+    "gulp-autoprefixer": "^4.0.0",
     "gulp-cssnano": "^2.1.2",
-    "sass": "^1.0.0-beta.4"
+    "gulp-sass": "^3.1.0",
+    "gulp-sourcemaps": "^2.6.1",
+    "sassdoc": "^2.5.0"
   }
 }
